[package]
authors = ["Matt Baker <baker.matt.j@gmail.com>"]
name = "crampon_anchor"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = {version = "0.7.0", features = ["device"]}
cortex-m = "0.7.0"
panic-halt = "0.2.0"
stm32l4xx-hal = {version = "0.7.0", features = ["stm32l412", "rt", "stm32-usbd"]}
embedded-hal = "0.2.7"
usb-device = "0.2.9"
usbd-serial = "0.1.1"
anchor = { git = "ssh://git@github.com/Annex-engineering/anchor.git" }

[build-dependencies]
anchor_codegen = { git = "ssh://git@github.com/Annex-engineering/anchor.git" }

[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 1